fixed bug with word wrap

--- a/static/less/user/im.less
+++ b/static/less/user/im.less
@@ -29,6 +29,7 @@
                     }
 
                     .content {
+                        word-wrap: break-word;
                     }
                 }
                 .msg-unread {
